Added markdown styling and bug fixes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>marked</title>
+<link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+    <link rel="stylesheet" href="css/markdown.min.css">
+
   </head>
   <body>
     <div id="app"></div>
