--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>marked</title>
-<link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
-    <link rel="stylesheet" href="css/markdown.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/norm.css" />
+    <link rel="stylesheet" type="text/css" href="/css/markdown.min.css" />
 
   </head>
   <body>
     <div id="app"></div>
-    <script src="build.js"></script>
+    <script src="../build.js"></script>
   </body>
 </html>
