--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>marked</title>
-    <link rel="stylesheet" type="text/css" href="/css/norm.css" />
-    <link rel="stylesheet" type="text/css" href="/css/markdown.min.css" />
+    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
 
   </head>
   <body>
